<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takeHomeViewConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui"
    tools:context=".presentation.view.fragment.TakeHomeFragment">

    <LinearLayout
        android:id="@+id/searchLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/take_home_spacing_15"
        android:layout_marginTop="@dimen/take_home_spacing_60"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="@dimen/take_home_width_250"
            android:layout_height="@dimen/take_home_height_50"
            android:layout_marginEnd="@dimen/take_home_spacing_15"
            android:autofillHints="@string/edit_text_auto_hint"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/shortened_url"
            android:inputType="textUri"
            android:paddingHorizontal="@dimen/take_home_spacing_15"
            android:textColor="@color/black"
            android:textSize="@dimen/take_home_text_20"
            android:textStyle="italic"
            tools:text="@string/shortened_url" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="@dimen/take_home_width_50"
            android:layout_height="@dimen/take_home_height_50"
            android:layout_marginStart="@dimen/take_home_spacing_15"
            android:background="@drawable/rounded_edit_text"
            android:contentDescription="@string/send_button_auto_hint"

            android:src="@drawable/ic_send_url_24" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listInformationConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/take_home_height_0"
        android:layout_marginHorizontal="@dimen/take_home_spacing_15"
        android:layout_marginTop="@dimen/take_home_spacing_45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLinearLayout">

        <TextView
            android:id="@+id/recentShortedUrlTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recently_shortened_url"
            android:textColor="@color/black"
            android:textSize="@dimen/take_home_text_20"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shortedUrlRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/take_home_height_0"
            android:layout_marginVertical="@dimen/take_home_spacing_15"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentShortedUrlTextView"
            tools:listitem="@layout/item_shorted_url"
            tools:itemCount="5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>